--- a/Data Manipulation/Translate from GUI Keys to Masterfile Keys.xaml
+++ b/Data Manipulation/Translate from GUI Keys to Masterfile Keys.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1771,5753</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1713,5725</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Translate_from_GUI_Keys_to_Masterfile_Keys_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -87,7 +87,7 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Translate_from_GUI_Keys_to_Masterfile_Keys" sap:VirtualizedContainerService.HintSize="1179,5648" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Translate_from_GUI_Keys_to_Masterfile_Keys" sap:VirtualizedContainerService.HintSize="916,5660" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="RelevantIndex" />
       <Variable x:TypeArguments="x:Boolean" Name="VäxelvistBoende" />
@@ -97,7 +97,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence DisplayName="Translate to dictionary keys" sap:VirtualizedContainerService.HintSize="874,6410" sap2010:WorkflowViewState.IdRef="Sequence_2">
+    <Sequence DisplayName="Translate to dictionary keys" sap:VirtualizedContainerService.HintSize="874,5572" sap2010:WorkflowViewState.IdRef="Sequence_2">
       <Sequence.Variables>
         <Variable x:TypeArguments="x:String" Name="MappingTable" />
         <Variable x:TypeArguments="sd:DataTable" Name="dt_MappingTable" />
@@ -263,14 +263,14 @@
         </sap:WorkflowViewStateService.ViewState>
       </ui:ReadRange>
       <ui:Comment sap:VirtualizedContainerService.HintSize="812,228" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// I styrfilen för roboten är första kolumnen en &quot;styrkomulm&quot; som gör att rätt keys från GUI:et mappas till rätt kolumner i masterfilen (kolumnernamnen ska vara likamed keyes). &#xA;&#xA;Genom att kolla på vem som är ansökan är sökt för, och om det finns ett tf persnr så mappas key:sen från dictionaryn till rätt kolumnnamn. Detta för att Keysen från gui dictionaryn ska få rätt namn." />
-      <Sequence DisplayName="Get index of row Applied For Who" sap:VirtualizedContainerService.HintSize="812,201" sap2010:WorkflowViewState.IdRef="Sequence_19">
+      <Sequence DisplayName="Get index of row Applied For Who" sap:VirtualizedContainerService.HintSize="812,80" sap2010:WorkflowViewState.IdRef="Sequence_19">
         <Sequence.Variables>
           <Variable x:TypeArguments="sd:DataTable" Name="dt_FilterAppliedFor" />
           <Variable x:TypeArguments="x:Int32" Name="I" />
         </Sequence.Variables>
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
@@ -788,13 +788,13 @@
                       <InArgument x:TypeArguments="x:String">[Adress]</InArgument>
                     </InvokeMethod>
                   </Sequence>
-                  <Sequence DisplayName="ZipCode" sap:VirtualizedContainerService.HintSize="496,80" sap2010:WorkflowViewState.IdRef="Sequence_60">
+                  <Sequence DisplayName="ZipCode" sap:VirtualizedContainerService.HintSize="496,434" sap2010:WorkflowViewState.IdRef="Sequence_60">
                     <Sequence.Variables>
                       <Variable x:TypeArguments="x:String" Name="ZipCode" />
                     </Sequence.Variables>
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                        <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                         <x:Boolean x:Key="IsPinned">False</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
@@ -803,7 +803,7 @@
                         <OutArgument x:TypeArguments="x:String">[ZipCode]</OutArgument>
                       </Assign.To>
                       <Assign.Value>
-                        <InArgument x:TypeArguments="x:String">[ListFullAdress(1).Trim]</InArgument>
+                        <InArgument x:TypeArguments="x:String">[ListFullAdress(1).Trim.Replace(" ", "")]</InArgument>
                       </Assign.Value>
                     </Assign>
                     <If Condition="[VäxelvistBoende]" DisplayName="If - Växelvist boende" sap:VirtualizedContainerService.HintSize="434,25" sap2010:WorkflowViewState.IdRef="If_18">
@@ -814,13 +814,13 @@
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                       <If.Then>
-                        <Sequence sap:VirtualizedContainerService.HintSize="476,171" sap2010:WorkflowViewState.IdRef="Sequence_70">
+                        <Sequence sap:VirtualizedContainerService.HintSize="476,170" sap2010:WorkflowViewState.IdRef="Sequence_70">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <Assign DisplayName="Assign - ZipCode" sap:VirtualizedContainerService.HintSize="434,83" sap2010:WorkflowViewState.IdRef="Assign_81">
+                          <Assign DisplayName="Assign - ZipCode" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_81">
                             <Assign.To>
                               <OutArgument x:TypeArguments="x:String">[KeyAdress]</OutArgument>
                             </Assign.To>
@@ -831,13 +831,13 @@
                         </Sequence>
                       </If.Then>
                       <If.Else>
-                        <Sequence sap:VirtualizedContainerService.HintSize="476,171" sap2010:WorkflowViewState.IdRef="Sequence_71">
+                        <Sequence sap:VirtualizedContainerService.HintSize="476,170" sap2010:WorkflowViewState.IdRef="Sequence_71">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <Assign DisplayName="Assign - ZipCode" sap:VirtualizedContainerService.HintSize="434,83" sap2010:WorkflowViewState.IdRef="Assign_75">
+                          <Assign DisplayName="Assign - ZipCode" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_75">
                             <Assign.To>
                               <OutArgument x:TypeArguments="x:String">[KeyAdress]</OutArgument>
                             </Assign.To>
@@ -867,7 +867,7 @@
                         <x:Boolean x:Key="IsPinned">False</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <Assign DisplayName="Assign - ZipCode" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_76">
+                    <Assign DisplayName="Assign - District" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_76">
                       <Assign.To>
                         <OutArgument x:TypeArguments="x:String">[District]</OutArgument>
                       </Assign.To>
@@ -1044,7 +1044,7 @@
           </Sequence>
         </If.Else>
       </If>
-      <If Condition="[SearchForWho.ToLower.Contains(&quot;mig själv&quot;)]" DisplayName="If - Search for 'Mig själv'" sap:VirtualizedContainerService.HintSize="812,1194" sap2010:WorkflowViewState.IdRef="If_11">
+      <If Condition="[SearchForWho.ToLower.Contains(&quot;mig själv&quot;)]" DisplayName="If - Search for 'Mig själv'" sap:VirtualizedContainerService.HintSize="812,477" sap2010:WorkflowViewState.IdRef="If_11">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1052,13 +1052,13 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <If.Then>
-          <Sequence sap:VirtualizedContainerService.HintSize="538,1005" sap2010:WorkflowViewState.IdRef="Sequence_48">
+          <Sequence sap:VirtualizedContainerService.HintSize="492,288" sap2010:WorkflowViewState.IdRef="Sequence_48">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Sequence DisplayName="Name of Student" sap:VirtualizedContainerService.HintSize="496,80" sap2010:WorkflowViewState.IdRef="Sequence_47">
+            <Sequence DisplayName="Name of Student" sap:VirtualizedContainerService.HintSize="450,80" sap2010:WorkflowViewState.IdRef="Sequence_47">
               <Sequence.Variables>
                 <Variable x:TypeArguments="x:String" Name="KeyName" />
                 <Variable x:TypeArguments="x:String" Name="Name" />
@@ -1211,7 +1211,7 @@
                 <InArgument x:TypeArguments="x:String">[Name]</InArgument>
               </InvokeMethod>
             </Sequence>
-            <Sequence DisplayName="Postnr and Ort" sap:VirtualizedContainerService.HintSize="496,797" sap2010:WorkflowViewState.IdRef="Sequence_50">
+            <Sequence DisplayName="Postnr and Ort" sap:VirtualizedContainerService.HintSize="450,80" sap2010:WorkflowViewState.IdRef="Sequence_50">
               <Sequence.Variables>
                 <Variable x:TypeArguments="x:String" Name="KeyName" />
                 <Variable x:TypeArguments="x:String" Name="Zipcode" />
@@ -1219,7 +1219,7 @@
               </Sequence.Variables>
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                  <x:Boolean x:Key="IsExpanded">False</x:Boolean>
                   <x:Boolean x:Key="IsPinned">False</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
@@ -1236,12 +1236,12 @@
                       <OutArgument x:TypeArguments="x:String">[Zipcode]</OutArgument>
                     </Assign.To>
                     <Assign.Value>
-                      <InArgument x:TypeArguments="x:String">[System.Text.RegularExpressions.Regex.Split(io_GUICaseDictionary("Postnummer och ort").ToString.Trim, "[A-Za-z]+").Where(Function(s) Not String.IsNullOrWhiteSpace(s)).ToArray()(0)]</InArgument>
+                      <InArgument x:TypeArguments="x:String">[System.Text.RegularExpressions.Regex.Split(io_GUICaseDictionary("Postnummer och ort").ToString.Trim, "[A-Za-z]+").Where(Function(s) Not String.IsNullOrWhiteSpace(s)).ToArray()(0).Replace(" ", "")]</InArgument>
                     </Assign.Value>
                   </Assign>
                 </TryCatch.Try>
                 <TryCatch.Catches>
-                  <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="400,21" sap2010:WorkflowViewState.IdRef="Catch`1_5">
+                  <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="438,21" sap2010:WorkflowViewState.IdRef="Catch`1_5">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -1252,12 +1252,12 @@
                       <ActivityAction.Argument>
                         <DelegateInArgument x:TypeArguments="s:Exception" Name="exception" />
                       </ActivityAction.Argument>
-                      <Assign DisplayName="Assign - Firstname" sap:VirtualizedContainerService.HintSize="434,81" sap2010:WorkflowViewState.IdRef="Assign_53">
+                      <Assign DisplayName="Assign - Firstname" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_53">
                         <Assign.To>
                           <OutArgument x:TypeArguments="x:String">[Zipcode]</OutArgument>
                         </Assign.To>
                         <Assign.Value>
-                          <InArgument x:TypeArguments="x:String">[Split(io_GUICaseDictionary("Postnummer och ort").ToString, " ")(0) + Split(io_GUICaseDictionary("Postnummer och ort").ToString, " ")(1)]</InArgument>
+                          <InArgument x:TypeArguments="x:String">[Split(io_GUICaseDictionary("Postnummer och ort").ToString, " ")(0) + Split(io_GUICaseDictionary("Postnummer och ort").ToString, " ")(1).Replace(" ", "")]</InArgument>
                         </Assign.Value>
                       </Assign>
                     </ActivityAction>
@@ -1276,12 +1276,8 @@
                 <InvokeMethod.TargetObject>
                   <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[io_GUICaseDictionary]</InArgument>
                 </InvokeMethod.TargetObject>
-                <InArgument x:TypeArguments="x:String">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="KeyName" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="Zipcode.Trim" />
-                </InArgument>
+                <InArgument x:TypeArguments="x:String">[KeyName]</InArgument>
+                <InArgument x:TypeArguments="x:String">[Zipcode.Trim]</InArgument>
               </InvokeMethod>
               <TryCatch DisplayName="Try Catch - Ort" sap:VirtualizedContainerService.HintSize="434,25" sap2010:WorkflowViewState.IdRef="TryCatch_5">
                 <sap:WorkflowViewStateService.ViewState>
@@ -1404,12 +1400,8 @@
                 <InvokeMethod.TargetObject>
                   <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[io_GUICaseDictionary]</InArgument>
                 </InvokeMethod.TargetObject>
-                <InArgument x:TypeArguments="x:String">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="KeyName" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="Ort.Trim" />
-                </InArgument>
+                <InArgument x:TypeArguments="x:String">[KeyName]</InArgument>
+                <InArgument x:TypeArguments="x:String">[Ort.Trim]</InArgument>
               </InvokeMethod>
             </Sequence>
           </Sequence>
@@ -1534,12 +1526,8 @@
                                               <InvokeMethod.TargetObject>
                                                 <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[io_GUICaseDictionary]</InArgument>
                                               </InvokeMethod.TargetObject>
-                                              <InArgument x:TypeArguments="x:String">
-                                                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="dt_KeysMappingTable.Columns(IndexColumn).ToString" />
-                                              </InArgument>
-                                              <InArgument x:TypeArguments="x:String">
-                                                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="GUICaseDictionaryCopy(Element.ToString).Trim" />
-                                              </InArgument>
+                                              <InArgument x:TypeArguments="x:String">[dt_KeysMappingTable.Columns(IndexColumn).ToString]</InArgument>
+                                              <InArgument x:TypeArguments="x:String">[GUICaseDictionaryCopy(Element.ToString).Trim]</InArgument>
                                             </InvokeMethod>
                                             <InvokeMethod DisplayName="Invoke Method - Remove old entry with old key" sap:VirtualizedContainerService.HintSize="258,136" sap2010:WorkflowViewState.IdRef="InvokeMethod_1" MethodName="Remove">
                                               <InvokeMethod.TargetObject>
